# universal-psm-converter

./: .gitignore  Cargo.toml  IPSA_INTEGRATION.md  LICENSE  README.md  test_integration.sh
docs/: architecture.d2  system_queue.d2
src/: cli.rs  conversion.rs  detection.rs  error.rs  lib.rs  main.rs  streaming.rs  types.rs
src/formats/: byonic.rs  fragpipe.rs  glyco_decipher.rs  gpquest.rs  hgi.rs  mod.rs  opair.rs  pglyco.rs
tools/d2/: ._d2-v0.7.1
tools/d2/d2-v0.7.1/: README.md
