[package]
name = "universal-psm-converter"
version = "0.1.0"
edition = "2021"
description = "Universal converter for bottom-up glycoproteomics search software"
license = "MIT"
repository = "https://github.com/riley-research/universal-psm-converter"
keywords = ["glycoproteomics", "proteomics", "mass", "spectrometry", "peptide", "spectral", "periscope"]
categories = ["science"]

[dependencies.once_cell]
version = "1.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
regex = "1.10"
calamine = "0.26"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"


[features]
default = []
streaming = []
cli = ["clap"]

[dependencies.clap]
version = "4.0"
features = ["derive"]
optional = true
